@@ -2,15 +2,16 @@ Package: GlobalOptions
 Type: Package
 Title: Generate functions to get or set global options
 Version: 0.0.2
-Date: 2014-10-1
+Date: 2014-10-6
 Author: Zuguang Gu
 Maintainer: Zuguang Gu <z.gu@dkfz.de>
 Depends: R (>= 2.10.0)
 Imports: methods
-Suggests: testthat (>= 0.3)
+Suggests: testthat (>= 0.3), knitr
+VignetteBuilder: knitr
 Description: Generate functions to get or set global options
 URL: https://github.com/jokergoo/GlobalOptions
 License: GPL (>= 2)
-Packaged: 2014-10-1 00:00:00 UTC; Administrator
+Packaged: 2014-10-6 00:00:00 UTC; Administrator
 Repository: CRAN
-Date/Publication: 2013-10-1 00:00:00
+Date/Publication: 2013-10-6 00:00:00
