@@ -1,1 +1,0 @@
-set options locally effective in specified namespace
