@@ -4,5 +4,5 @@ cd ..
 
 R CMD REMOVE GlobalOptions
 R CMD build --compact-vignettes=gs+qpdf GlobalOptions
-R CMD check GlobalOptions_0.0.2.tar.gz
+R CMD check --as-cran --timings GlobalOptions_0.0.2.tar.gz
 R CMD INSTALL GlobalOptions_0.0.2.tar.gz
