@@ -41,7 +41,7 @@ setGlobalOptions(...)
   \preformatted{
   foo.options(RESET = TRUE)
   }
-  The value for each option can be set as a list which may contain more control of the option:  
+  The value for each option can be set as a list which contains more controls of the option:  
 
   \preformatted{
   foo.options = setGlobalOptions(
@@ -56,7 +56,7 @@ setGlobalOptions(...)
 \describe{
   \item{.value}{The default value.}
   \item{.length}{The valid length of the option value. It can be a vector, the check will be passed if one of the length fits.}
-  \item{.class}{The valid class of the option value. It can be a vector, the check will be passed if one of the class fits.}
+  \item{.class}{The valid class of the option value. It can be a vector, the check will be passed if one of the classes fits.}
   \item{.validate}{Validation function. The input parameter is the option value and should return a single logical value.}
   \item{.filter}{Filtering function. The input parameter is the option value and it should return a filtered option value.}
   \item{.read.only}{Logical. The option value can not be modified if it is set to \code{TRUE}.}
